fixed z-index on buddy helper mobile

--- a/current-app-wd/src/css/main.css
+++ b/current-app-wd/src/css/main.css
@@ -389,7 +389,7 @@ html div.completer-dropdown {
     position: fixed;
     top: 27%;
     right: 0;
-    z-index: -1;
+    z-index: 0;
   }
 
   .bubble {
